# PsychicHttp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  idf_component.yml.disabled  library.json  platformio.ini
benchmark/arduinomongoose/: platformio.ini
benchmark/psychichttp/: platformio.ini
benchmark/psychichttp/src/: main.cpp
benchmark/psychichttps/: platformio.ini
benchmark/psychichttps/src/: main.cpp
examples/arduino/: arduino.ino
examples/esp-idf-pio/: platformio.ini  sdkconfig.s3
examples/esp-idf-pio/src/: main.cpp
examples/esp-idf/main/: main.cpp
examples/pio-arduino/: platformio.ini
examples/platformio/src/: main.cpp
examples/websockets/: platformio.ini
examples/websockets/src/: main.cpp
scripts/: fix_intellisense.py  run_full_pio_matrix.py
src/: ChunkPrinter.cpp  ChunkPrinter.h  MultipartProcessor.cpp  PsychicCore.h  PsychicEndpoint.cpp  PsychicEndpoint.h  PsychicEventSource.cpp  PsychicFileResponse.cpp  PsychicFileResponse.h  PsychicHandler.cpp  PsychicHttp.h  PsychicHttpServer.cpp  PsychicHttpServer.h  PsychicHttpsServer.h  PsychicJson.cpp  PsychicMiddlewares.cpp  PsychicMiddlewares.h  PsychicRequest.cpp  PsychicRequest.h  PsychicResponse.cpp  PsychicResponse.h  PsychicRewrite.cpp  PsychicRewrite.h  PsychicStaticFileHander.cpp  PsychicStreamResponse.cpp  PsychicStreamResponse.h  PsychicUploadHandler.cpp  PsychicWebParameter.h  TemplatePrinter.cpp  TemplatePrinter.h
